# llm-inference-lab

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_eqspec_correctness.py
.github/workflows/: ci.yml
benchmarks/: benchmark_sequence_pool.py
configs/: __init__.py  baseline.yaml  specdec.yaml  specdec_hf.yaml  vllm.yaml
docs/: __init__.py  progress.md
docs/design/: correctness_invariants.md  zero_copy_design.md
docs/engineering/: appendix_engineering.md  readme_full_backup.md
docs/results/: INDEX.md  curated_results.md
env/: requirements.txt
progress/: progress.md
scripts/: __init__.py  comprehensive_k_sweep.py  k_sweep_test.py  microbench_verify.py  t4_k_sweep.py
scripts/benchmarks/: sequence_pool_benchmark.py
scripts/dev/: smoke_cuda.py
scripts/k_sweep/: __init__.py  plotting.py  results.py  runner.py  utils.py
src/: __init__.py
src/benchmarks/: __init__.py  profiler.py  quality_eval.py  run_bench.py
src/kernels/: __init__.py  build.py  reference.py  registry.py
src/metrics/: __init__.py  detailed_profiler.py  memory_profiler.py  structured_profiler.py
src/optimization/: __init__.py  mixed_precision.py  tokenizer_optimization.py
src/scheduler/: __init__.py  speculative_scheduler.py
tests/: __init__.py  stress_test_long_run.py  test_basic.py  test_batch_decode.py  test_cpu_smoke.py  test_cuda_graph_fallback.py  test_deterministic_mode.py  test_kernel_registry.py  test_kernels_verify.py  test_kv_cache.py  test_metrics_profiler.py  test_phase4a_optimizations.py  test_structured_profiler.py
(+97 files in other folders)
