[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-lab"
version = "0.1.0"
description = "LLM Inference Lab: speculative decoding, kernels, benchmarking"
authors = [{name = "LLM Inference Lab"}]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "torch>=2.0.0,<3.0.0",
  "transformers>=4.30.0,<5.0.0",
  "numpy>=1.24.0,<2.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "psutil>=5.9.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0,<8.0.0",
  "flake8>=6.0.0,<7.0.0",
  "black>=23.7.0,<24.0.0",
  "isort>=5.12.0,<6.0.0",
  "mypy>=1.5.0,<2.0.0",
]

[project.scripts]
specdec = "specdec_cli.main:main"
